fixed layout issue for body.css and card.css

--- a/src/Body.css
+++ b/src/Body.css
@@ -1,13 +1,29 @@
-.bodyLayout{
-    width: 375px;
+.bodyContainer{
+    width: 400px;
     height: 732px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;  
+}
+
+.bodyBackground{
+    background: #f9f5e9;
+}
+
+.bodyLayout {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 30px;
-    
+    width: 100%;
 }
 
-.background{
-    background: #f9f5e9;
+.bodyTextTypography{
+color: #000;
+text-align: center;
+font-family: "Pixelify Sans";
+font-size: 30px;
+font-style: normal;
+font-weight: 500;
+line-height: 80%; /* 24px */
 }
