--- a/src/Card.css
+++ b/src/Card.css
@@ -10,7 +10,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 15px;
+    padding: 5px;
+    
 }
 
 .typography{
